Initial relase: - Configuration of fleet partner server - App deplyment on server - Admin lte theme has been implemented - Added ability to login over facebook and google account - Ability to use avatar from facebook and google has been made - Customize admin lte theme , css and font avesome. - System which detect active page in menu has been made. - Authentification over token using passport for server users has been implemnted - Role system for server user has been implemented - Users resource controller has been made. - Ability to assign roles to users has been made. - Page with crud functionalities for users has been made - Ability to upload avatar for user has been added. - Profile page has been made - Page with tools for managment Oauth tokens and Oauth Clients has been made. - Customers and server Users has been seperated in diffrent tables and models - Rest api for customers has been added - Crud table has been added for customers - Provider and provider_id is unique now - Page for managment loyalty cards has been made. - Added crud functionality for loyalty cards. - Ability to send images of receipt for loyalty cards via rest api has been added. - Ability to open image in full size has been added. - Added ability to add points to users after editing loyalty cards. - Abity to sort by status has been added. - Rest Api for loyalty cards has been added. - Page with loyalty rewards has been added. - Loaylty rewards table with crud functionalities has been added. - Abilty to upload pictures of rewards has been added. - Rest api for rewards has been made. - Added api for customer login and registration via provider and provider_id - Added sorting and pagination for all tables. - Improved design of tables and profile page.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -30294,7 +30294,8 @@ readers do not read off random characters that represent icons */
   background-color: #007bff;
 }
 
-.modal-open {
+.modal-open,
+.swal2-shown {
   padding-right: 0px !important;
 }
 
@@ -30302,7 +30303,11 @@ readers do not read off random characters that represent icons */
   display: none;
 }
 
-.receipt_thumbnails {
+.card_thumbnails {
   cursor: pointer;
+}
+
+.invalid-feedback {
+  display: block;
 }
 
